# pipeline-runner

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/pipelines/: hello.yaml
src/pipeline_runner/: __init__.py  __main__.py  cli.py  config.py  nodes.py  runner.py  state.py  template.py
tests/: test_pipeline_runner.py
